NSGminer v0.9.0 - 31st of December 2015
- NeoScrypt CPU and GPU mining support implemented;
- libblkmaker v0.5.2, libbase58 v0.1.4 and libjansson v2.7 merged;
- many small fixes and improvements


BFGMiner Version 2.10.14 - September 19, 2013

- Only show long-poll message in pool summary if it's not using stratum.
- README.OpenWrt: Include serialusb drivers
- Bugfix: Free temporary kernel path copy when writing config file
- Bugfix: Put kernel path on the (main) stack after initialisation from
commandline/config, to avoid appending an argv or jansson string
- Bugfix: Try to initialise libusb later, so any mutexes applog might need are
initialised
- AUTHORS: Add contributor Josh Lehan


BFGMiner Version 2.10.13 - August 30, 2013

- Fixes column alignment in decimal fields. Workaround for printf rounding up
when formatting decimals into limited width.
- Bugfix: configure: More fixing BSD sed syntax for libusb header search
- README: Update solo mining docs
- Bugfix: icarus: Don't try to send work if device open failed
- Upgrade libblkmaker to 0.3.2
- Bugfix: GBT: Advertise coinbasevalue capability
- README.RPC: Remove usbstats mention
- README: Add FAQ regarding cgminer messing up drivers
- README.RPC: Fix miner name
- README.RPC: Correct to mention other supported devices for pgaidentify
- Bugfix: configure: Really fix BSD sed syntax for libusb header search
- README.OpenWrt: Import from BFGMiner downloads
- Check for negative wait time in socket_full.
- Adjust socket wait timeout in recv_line according to how long we've already
waited to avoid a 60 second wait dropping to 1 second due to a blocked socket.
- GPU fan rpm display 9999 when it overflows
- Bugfix: Use BSD-friendly sed syntax for libusb header search
- make-release: Skip stripping debug info from Windows EXEs, for now
- Bugfix: notifier_init (Windows): setsockopt needs an int for SO_REUSEADDR
- Bugfix: README: --temp-cutoff sets the maximum temperature before cutoff, not
temperature that triggers cutoff