@@ -1,10 +1,9 @@
+Maintained by John Doering <ghostlander@phoenixcoin.org>
+
+https://github.com/ghostlander/nsgminer
+
 This package was debianized by Nick Bushor <nushor11@gmail.com> on
 Sat, 05 May 2012 12:08:35 -0500.
-
-It was downloaded from https://github.com/luke-jr/bfgminer
-
-Upstream Author: Luke Dashjr <luke_bfgminer@dashjr.org>
-
 
 Distributed under the terms of the GNU General Public License.
 
