@@ -859,7 +859,7 @@ extern int opt_hysteresis;
 extern int opt_fail_pause;
 extern int opt_log_interval;
 extern unsigned long long global_hashrate;
-extern char *current_fullhash;
+char current_fullhash[68];
 extern uint64_t best_diff;
 extern struct timeval block_timeval;
 
