@@ -1,3 +1,9 @@
+NSGminer v0.9.1 - 16th of January 2016
+- NeoScrypt OpenCL kernel v6;
+- block hash calculation for display purposes fixed;
+- some cosmetics
+
+
 NSGminer v0.9.0 - 31st of December 2015
 - NeoScrypt CPU and GPU mining support implemented;
 - libblkmaker v0.5.2, libbase58 v0.1.4 and libjansson v2.7 merged;
